# vean

./: .gitignore  .lsp.json  .mcp.json  AGENTS.md  BUILD-MONITOR.md  CONTRIBUTING.md  DESIGN-LIVE-COMP-PREVIEW.md  DESIGN-LIVE-PREVIEW.md  DESIGN-MEDIA.md  DESIGN-MOVE1.md  DESIGN-MOVE2.md  DESIGN-MOVE3.md  DESIGN-SETTINGS.md  DESIGN-TAKES.md  DESIGN-UI.md  DESIGN-WORKTREE.md  GATE-MOVE1A.md  GATE-MOVE1B.md  GATE-MOVE2.md  GATE-MOVE5.md  GATE.md  LICENSING.md  README.md  ROADMAP.md  biome.json  drizzle.config.ts  package.json  tsconfig.json  tsconfig.macos-harness.json  vitest.config.ts  wdio.macos.conf.ts  wdio.tauri.conf.ts
.claude/: launch.json
.claude-plugin/: plugin.json
.githooks/: post-checkout
app/: index.html  package.json
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  vean-actions.json
app/src-tauri/capabilities/: default.json
app/src-tauri/sidecars/: README.md
app/src-tauri/src/: harness_static_probe.rs  lib.rs  main.rs  runtime_layout.rs
corpus/: README.md  build-vean.ts  harvested-assembly.mlt  harvested-demo.mlt  harvested-example.mlt  harvested-factory-demo.mlt  shotcut-dissolve.mlt  shotcut-gap.mlt  shotcut-multitrack.mlt  shotcut-single.mlt  vean-fixtures.ts  vean-keyframes.mlt  vean-multitrack.mlt
drizzle/: 0000_init_state.sql  0001_media_routing.sql  0002_media_probe_columns.sql  0003_media_ranges.sql
remotion/: README.md  package.json  remotion.config.ts  tsconfig.json
scripts/: app-doctor.ts  bundle-sidecars.ts  comp-lint.ts  diagnose.ts  dials-generate.ts  doctor-macos-driver.ts  doctor-tauri-driver.ts  drive.ts  edit.ts  (+46 more)
(+500 files in other folders)
