[package]
name = "vean-app"
version = "0.0.0"
description = "vean local Mac app"
authors = ["vean contributors"]
edition = "2021"

[lib]
name = "vean_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vean-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
